tests/paczka1/fuzzy1/57058983.err
Error in line 1: A114 S74 58,5
Error in line 7: JnN A114 5,8
Error in line 11: A114 A114 60,6
Error in line 12: A114 S74 78,2
Error in line 8: D8s5 A18 84,4
Error in line 24: 2LU A18 60,7
Error in line 33: Ak2FP A114 60,6
Error in line 27: D8s5 A114 44,4
